<resources>
    <string name="app_name">BdayReminder</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="bdayreminder">BdayReminder</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here">REGISTER HERE</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="confirm_password">Confirm password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="enter_your_birth_date">Birth date dd/mm/yyyy</string>
    <string name="register">Register</string>
    <string name="password_error">Password must have  at least 8 characters!</string>
    <string name="email_error">Invalid email!</string>
    <string name="error_title">Oops</string>
    <string name="error_message">Something went wrong! Please try again.</string>
    <string name="general_positive_button">OK</string>
    <string name="confirm_password_error">Passwords do not match!</string>
    <string name="empty_input_field_error">Can not be empty!</string>
    <string name="birthdate_error">Invalid date!</string>
    <string name="my_groups">My groups</string>
    <string name="joined_groups">Joined groups</string>
    <string name="search_group">Search group</string>
    <string name="account">Account</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="log_out">LOG OUT</string>
    <string name="upcoming">UPCOMING</string>
    <string name="calendar">CALENDAR</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="present_idea">Present idea</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="delete">Delete</string>
    <string name="plus_add">+ Add</string>
    <string name="delet_alert_dialog">Are you sure you want to delete present idea</string>
    <string name="present_idea_deleted">Present idea deleted</string>
    <string name="present_idea_with_dots">Present idea:</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="theme">Theme</string>
    <string name="change">CHANGE</string>
    <string name="delete_account">Delete account</string>
    <string name="pick_color">Pick a color</string>
    <string name="defaultColor">DEFAULT</string>
    <string name="lilac">LILAC</string>
    <string name="gray">GRAY</string>
    <string name="mint">MINT</string>
    <string name="brown">BROWN</string>
    <string name="red">RED</string>
    <string name="pick_theme">PICK THEME</string>
    <string name="yes">YES</string>
    <string name="members">Members</string>
</resources>
