<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/myGropus"
            android:icon="@drawable/ic_group_admin"
            android:title="@string/my_groups" />
        <item
            android:id="@+id/joinedGroups"
            android:icon="@drawable/ic_group"
            android:title="@string/joined_groups" />
        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_search"
            android:title="@string/search_group" />
    </group>

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        >
        <menu>
            <item
                android:id="@+id/account"
                android:checkable="true"
                android:icon="@drawable/ic_person"
                android:title="@string/account" />
            <item
                android:id="@+id/notification"
                android:checkable="true"
                android:icon="@drawable/ic_notifications"
                android:title="@string/notifications" />
        </menu>
    </item>


</menu>