<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="5dp"
    android:background="@drawable/recycler_item_background"
    android:elevation="5dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:background="#e9e9e9"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llParent"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivProfilePic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_account_circle" />

            <TextView
                android:id="@+id/tvFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/content_font" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/llDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvNumOfYears"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/content_font"
                android:textStyle="bold">

            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/dividerColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvNotification"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/notification"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/content_font" />

                <Switch
                    android:id="@+id/sNotiffication"
                    android:layout_width="60dp"
                    android:layout_height="10dp"
                    android:layout_marginEnd="10dp"
                    android:checked="true"
                    android:textOff="@string/off"
                    android:textOn="@string/on">

                </Switch>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/dividerColor">

            </View>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:baselineAligned="false">

                <TextView
                    android:id="@+id/tvPresentIdea"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/present_idea_with_dots"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/content_font" />


                <Button
                    android:id="@+id/bAdd"
                    android:layout_width="70dp"
                    android:layout_height="22dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/present_idea_btn_shape"
                    android:elevation="2dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/plus_add"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlPresentIdea"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="50dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvPresentIdeaInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/bRemove"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/tvPresentIdeaInput"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ic_delete" />

            </RelativeLayout>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>